Revision history for {{ $dist->name }}

{{$NEXT}}
  [Other]
  - Updated contributor metadata.

v0.4.0    2018-11-04 15:06:57+00:00 Europe/London
  [Documentation]
   - Fixed typo in POD (Shlomi Fish)

   - Added to SEE ALSO section.

  [Toolchain]
  - Convert the distribution to use Dist-Zilla as the build system
    instead of the undermaintained and unloved Module-Install.
    (Shlomi Fish)

  [Other]
  - Perltidy source.


v0.3.7   2014-08-16

       - Fixed license in Makefile.PL to make CPANTS happy.

v0.3.6   2004-06-18

       - Clean namespace.

v0.3.5   2014-06-04

       - Fixed bug in distribution that required the missing xt
         directory.

v0.3.4   2014-06-04

       - Tweaked MANIFEST.SKIP rules.

       - Updated bugtracker URL in metadata.

       - Removed QA tests from the distribution.

       - Removed unnecessary dependency from Makefile.PL.

v0.3.3   2014-02-18

       - Updated README.

       - Minor POD markup tweaks.

v0.3.2   2014-02-18

       - Made Moose attributes lazy [Rusty Conover].

       - Ignore numbers separated by digits, e.g. "2013-2014"
         [Rusty Conover and Robert Rothenberg].

v0.3.1  2014-02-03

       - Updated POD formatting.

       - Fixed outdated POD that referred to self as a requirement.

       - Changed dependency from Readonly to Const::Fast and updated
         POD accordingly (GitHub#4).

       - Cleaned up Changes file formatting (GitHub#3).

v0.3.0  2013-12-30

       - Removed dependency on the "self" module (GitHub#2)

       - Tweaks to the POD spelling test

       - Reformatted Changes file (GitHub#3)

       - Updated README accordignly.

v0.2.2  2013-12-30

       - Removed MYMETA files from distribution (RT#89125)

       - Added SEE ALSO section to POD (GitHub#1)

v0.2.1  2012-12-16

	- Removed example tests that were causing problems for some
          users. (These tests were meant for developers anyway.)

v0.2.0  2012-12-15

       - Added tests.
