@@ -3,12 +3,12 @@ requires "Encode" => "0";
 requires "Getopt::Long" => "2.36";
 requires "HTML::Parser" => "0";
 requires "List::Util" => "0";
-requires "Moose" => "0";
-requires "MooseX::NonMoose" => "0";
+requires "Moo" => "0";
 requires "Scalar::Util" => "0";
 requires "Search::Tokenizer" => "0";
 requires "Test::Builder::Module" => "0";
 requires "Text::Aspell" => "0";
+requires "Types::Standard" => "0";
 requires "curry" => "0";
 requires "namespace::autoclean" => "0";
 requires "perl" => "v5.10.0";
